# jira-git-helper

./: .mise.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  jira_git_helper.py  pyproject.toml
.claude/: settings.local.json
jira_git_helper/: __init__.py  cli.py  config.py  formatters.py  git.py  jira_api.py
jira_git_helper/tui/: branch.py  file_picker.py  modals.py  pr_picker.py  prune.py  theme.py  ticket_picker.py
tickets/: 0001.md
