[project]
name = "jira-git-helper"
version = "0.9.0"
description = "JIRA ticket context manager for git workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ross Cousens" },
]
keywords = ["jira", "git", "cli", "developer-tools", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1",
    "jira>=3.10.5",
    "requests>=2.32.0",
    "textual>=8.0.0",
]

[project.scripts]
jg = "jira_git_helper:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/jira-git-helper"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/jira-git-helper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
